tests/src/main/java/kendal/test/negative/inherit/MissingRequiredInheritedParam.out
MissingRequiredInheritedParam.java:27:5: compiler.err.annotation.missing.default.value: kendal.test.negative.inherit.MissingRequiredInheritedParam.InheritingAnn, requiredParam
1 error